# ezIntel

data/: log1.txt  main.py  readme.md
data/agents/: BlogProposalAgent.py
data/data/: company_context.txt  company_past_blogs.txt  tech_news_content.txt
ezIntelDashboard/: package.json
ezIntelDashboard/src/app/action_agents/: page.tsx
ezIntelDashboard/src/app/action_agents/[id]/: page.tsx
ezIntelDashboard/src/app/action_agents/new/: page.tsx
ezIntelDashboard/src/app/data_agents/: page.tsx
ezIntelDashboard/src/app/data_agents/[id]/: page.tsx
ezIntelDashboard/src/app/data_agents/new/: page.tsx
ezIntelDashboard/src/app/settings/: old-page.tsx  page.tsx
ezIntelDashboard/src/components/Breadcrumbs/: Breadcrumb.tsx
ezIntelDashboard/src/components/Sidebar/: index.tsx
ezIntelDashboard/src/config/: firebase.ts
hot/: .env.empty  .gitignore  pyproject.toml
hot/assets/: HackerNewsV4-12.csv  TowardsDSV4-12.csv
hot/db/: __init__.py
hot/db/migrate/: __main__.py
hot/hydration/: __init__.py
hot/index/: __init__.py
hot/index/sources/: __init__.py  classes.py
hot/index/sources/hacker_news/: __init__.py
hot/index/sources/towards_ds/: __init__.py
hot/sv/: __init__.py
hot/url/: __init__.py
